# edlisp

./: .gitignore  CMakeLists.txt  README.md  demo.sh
resources/: demo.txt  simple-lisp.txt
src/: cli_app.c  cli_app.h  edlisp_eval.c  edlisp_eval.h  edlisp_io.c  edlisp_io.h  edlisp_semantic.c  edlisp_semantic.h  file_app.c  file_app.h  lexer.l  lisp.c  lisp.h  main.c  parser.y
